@@ -130,9 +130,10 @@ if (ideaPath != null) {
       "-Didea.jre.check=true",
       "-Didea.is.internal=true",
       "--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED",
+//      "--add-exports=java.desktop/sun.awt=ALL-UNNAMED",
       "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
       "--add-opens=java.desktop/sun.font=ALL-UNNAMED",
-      "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
+//      "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
       "--add-opens=java.desktop/sun.swing=ALL-UNNAMED",
       "--add-opens=java.desktop/javax.swing=ALL-UNNAMED",
       "--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED",
